Mar 25, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Reorganized the menu a bit. Added Cheat Search
   dialog.

Mar 22, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfxvideo/gpu.c: Capture screenshots correctly in RGB24
   mode.

Mar 11, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * gui/Gtk2Gui.c, win32/gui/WndMain.c: Don't call CheckCdrom() and
   LoadCdrom() when switching ISO.

Mar 6, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Reorganized menu.
 * po/zh_CN.po, po/zh_TW.po, po/pcsx.pot: Updated.

Mar 2, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * gui/Gtk2Gui.c: Remember last used directory in the Open Image dialog.

Feb 27, 2009 Wei Mingzhi <whistler@openoffice.org>

 * libpcsxcore/plugins.c, win32/gui/WndMain.c, gui/Plugin.c: Moved
   cdOpenCase to libpcsxcore.
 * data/pcsx.glade2, gui/Gtk2Gui.c: Added "Switch ISO" function.
 * win32/gui/WndMain.c, win32/resource.h: Likewise.
 * libpcsxcore/mdec.c: Don't use precalculated table in ROUND(), which
   may cause crashes due to subscript out of the bound in some cases.
 * libpcsxcore/psxinterpreter.c: Silenced GCC warnings.

Feb 20, 2009 Wei Mingzhi <whistler@openoffice.org>

 * configure.ac, Makefile.am: dfOpenGL is now only built when specified
   with --enable-dfopengl during configure.

Feb 19, 2009 Wei Mingzhi <whistler@openoffice.org>

 * configure.ac: Allow changing plugins install directory with --libdir.
 * plugins/dfinput/Makefile.am: Likewise.
 * plugins/dfcdrom/Makefile.am: Likewise.
 * plugins/dfxvideo/Makefile.am: Likewise.
 * plugins/dfsound/Makefile.am: Likewise.
 * plugins/dfOpenGL/Makefile.am: Likewise.
 * gui/Cheat.c, libpcsxcore/cheat.c: Moved platform-indepandent stuff
   to libpcsxcore. Use dynamic memory allocation.
 * libpcsxcore/cheat.h: Added.
 * libpcsxcore/r3000a.c: Free all cheats on shutdown.
 * gui/LnxMain.c, libpcsxcore/psxcounters.c: Moved cheat applying to
   psxcounters.c from SysUpdate().

Feb 13, 2009 Wei Mingzhi <whistler@openoffice.org>
